[build-system]
requires = ["setuptools<=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bounce"
version = "0.1.0"
authors = [{name = "Leonard Papenmeier", email = "leonard.papenmeier@posteo.de"}]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch==2.0.0",
    "botorch>=0.8.2,<0.9.0",
    "gin-config>=0.5.0,<0.6.0",
    "pandas>=1.5.3,<1.6.0",
    "xgboost>=1.7.5,<1.8.0",
    "coverage>=7.2.5,<7.3.0",
    "requests>=2.31.0,<2.32.0",
    "poli @ git+https://github.com/MachineLearningLifeScience/poli.git@dev",
]

[project.optional-dependencies]
dev = [
    "black>=22.12.0,<22.13.0",
    "memray>=1.6.0,<1.7.0",
    "pytest>=7.3.1,<7.4.0",
    "coverage>=7.2.5,<7.3.0"
]